--- a/project.config.json
+++ b/project.config.json
@@ -23,7 +23,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.8.0",
-	"appid": "wxe5d16971b1425786",
+	"appid": "wx0dca5bee0b49c611",
 	"projectname": "peing",
 	"debugOptions": {
 		"hidedInDevtools": []
